# enterprise-regression-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: framework-ci.yml
docs/: azure-vm-non-container-deployment.md  github-actions-results-only.md  testing-sample-producer-consumer.md
examples/deployment/: regauto-dashboard.env.example  regauto-dashboard.service  windows-dashboard-run.ps1  windows-scheduled-run.ps1
examples/github-actions/: checkout-build-run.yml  gate1.yml  gate2-scheduled.yml  impacted-gate1.yml
examples/test-cases/rest/: expected_output.json  input.json  metadata.yaml
samples/sample-application-repo/regression/config/: branches.yaml  regression.yaml
samples/sample-application-repo/regression/executors/: recommendation_service.py
src/regauto/: __init__.py  build.py  capacity.py  cli.py  comparison.py  config.py  db.py  discovery.py  execution.py  impact.py  jms.py  logging_config.py  models.py  persistence.py  process.py  reporting.py  scaffold.py  source_control.py
src/regauto/dashboard/: api.py
suites/jms-mq-consumer/regression/config/: branches.yaml  regression.yaml
suites/jms-mq-consumer/regression/executors/: jms_mq_flow.py
suites/jms-mq-producer/regression/config/: branches.yaml  regression.yaml
suites/jms-mq-producer/regression/executors/: jms_mq_producer.py
suites/regression-test-consumer/regression/config/: regression.yaml
tests/: test_comparison.py  test_discovery.py  test_python_executor.py  test_reporting.py  test_scaffold.py
(+33 files in other folders)
