[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-regression-platform"
version = "0.1.0"
description = "Centralized enterprise regression automation platform for multi-repository quality gates."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "PyYAML>=6.0.0",
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "mypy>=1.9.0", "types-PyYAML"]

[project.scripts]
regauto = "regauto.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
